		mblogin and mbuseradd.
		Started NetBSD port, is in testing fase.
		Added support for xinetd.
		Fixed filemodes for some directories and data files.

	SETUP.sh:
		Better grep to check for existing usernames like bbs, mbse.
		Ported to NetBSD.
		Added support for xinetd configuration.
		Changed distribution test for Mandrake.
		Changed to recognize the e-smith server based on RedHat.

	installinit.sh:
		Changed to recognize the e-smith server based on RedHat.
		On RedHat, Mandrake and e-smith systems the symlinks to start
		and stop the bbs are now added.
		Reorganized the init scripts.

	libcommon.a:
		When adding seenby entries, the zone number is copied from the
		previous adress just like with the net numbers. This is for
		old style tic files, they were not full 3d.
		Fixes for Sparc systems.
		The nodelist information now also holds the Txx flags.
		The mkdirs function now needs a mode parameter for directory
		creation.
		The filesystem space check is now reliable on FreeBSD and 
		NetBSD.

	lang:
		Changed language prompts 6, 71, 429.
		Added language prompts 472 and 473 for FS editor.
		Added language prompts 474, 475 and 476 for address entry.
		Added language prompts 477 and 478 for post with user alias.
		Deleted language prompts 387, 388, 389, 390

	examples:
		Changed menu setup.mnu and textfiles setup.* to show the new
		setup entries for the users.

	mbsetup:
		Changed usereditor, new layout, added new settings and
		changed password reset function. The system password is
		now also updated.
		Added setup item for menus 317 and 318.
		Changed the order of menu 1, global settings. The screens are
		now in a more logical order for a first system setup.
		Most datafiles are now saved mode 0640 exept the files that
		need to be rewritten by users, they have mode 0660.
		The filemodes are always checked and corrected during startup.
		In the file database editor the default choice was 0 in stead
		of -.